--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 plugins {
-	id 'fabric-loom' version '0.1.0-SNAPSHOT'
+	id 'fabric-loom' version '0.2.0-SNAPSHOT'
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 archivesBaseName = "craftingpad"
-version = "1.0.0"
+version = "1.0.2"
 
 minecraft {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:18w50a"
-	mappings "net.fabricmc:yarn:18w50a.2"
-	modCompile "net.fabricmc:fabric-loader:0.2.0.64"	
+	minecraft "com.mojang:minecraft:19w03c"
+	mappings "net.fabricmc:yarn:19w03c.1"
+	modCompile "net.fabricmc:fabric-loader:0.3.2.96"	
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modCompile "net.fabricmc:fabric:0.1.1.47"	
+	modCompile "net.fabricmc:fabric:0.1.4.76"	
 }
