--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.14
-yarn_mappings=1.14+build.1
-loader_version=0.4.2+build.132
+minecraft_version=1.14.3
+yarn_mappings=1.14.3+build.9
+loader_version=0.4.8+build.155
+#Fabric api
+fabric_version=0.3.0+build.187
 # Mod Properties
 mod_version=1.0.3
 maven_group=io.github.strikerrocker.craftingstick
 archives_base_name=craftingpad
-# Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-fabric_version=0.2.7+build.127
