--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.14.3
-yarn_mappings=1.14.3+build.9
-loader_version=0.4.8+build.155
+minecraft_version=1.15.2
+yarn_mappings=1.15.2+build.1
+loader_version=0.7.5+build.178
 #Fabric api
-fabric_version=0.3.0+build.187
+fabric_version=0.4.29+build.290-1.15
 # Mod Properties
-mod_version=1.0.3
+mod_version=1.0.4
 maven_group=io.github.strikerrocker.craftingstick
 archives_base_name=craftingpad
