--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext.Versions = new Properties()
-Versions.load(file("Versionfiles/mcversion-1.16.4.properties").newReader())
+Versions.load(file("Versionfiles/mcversion-20w46a.properties").newReader())
 
 archivesBaseName = "craftingpad"
 ext.projectVersion = "1.0.5"
