--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,25 @@
-buildscript {
-    dependencies {
-        classpath 'de.guntram.mcmod:crowdin-translate:1.3+1.17'
-    }
-    repositories {
-        maven {
-            name = 'CrowdinTranslate source'
-            url = "https://minecraft.guntram.de/maven/"
-        }
-    }
-}
-
 plugins {
-    id 'fabric-loom' version '0.9-SNAPSHOT'
-    id "com.modrinth.minotaur" version "1.1.0"
+    id 'fabric-loom' version '0.10-SNAPSHOT'
 }
-
-apply plugin: 'de.guntram.mcmod.crowdin-translate'
-crowdintranslate.crowdinProjectName = 'craftingpad'
-crowdintranslate.verbose = false
 
 repositories {
     maven { url "https://maven.fabricmc.net/" }
-    maven { url "https://minecraft.guntram.de/maven/" }
     maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_16
 
-archivesBaseName = "craftingpad"
-version = "${project.minecraft_version}-${project.mod_version}"
+archivesBaseName = "craftingpad-" + project.minecraft_version
+version = project.mod_version
 
-minecraft {
+dependencies {
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings loom.layered() {
+        officialMojangMappings()
+    }
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 }
 
 processResources {
@@ -40,41 +29,13 @@ processResources {
     }
 }
 
-dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
-    modImplementation "de.guntram.mcmod:crowdin-translate:${project.crowdintranslate_version}"
-    include "de.guntram.mcmod:crowdin-translate:${project.crowdintranslate_version}"
-}
-
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = "sources"
-    from sourceSets.main.allSource
+tasks.withType(JavaCompile).configureEach {
+    it.options.encoding = "UTF-8"
+    it.options.release = 16
 }
 
 jar {
-    from "LICENSE"
-}
-
-build {
-    dependsOn downloadTranslations
-}
-
-import com.modrinth.minotaur.TaskModrinthUpload
-
-task publishModrinth (type: TaskModrinthUpload){
-    token = System.getenv("MODRINTH_TOKEN")
-    projectId = 'wyaOz4TN'
-    versionNumber = project.version
-    versionName = project.archivesBaseName
-    releaseType = 'release'
-    uploadFile = remapJar // This is the java jar task
-    addGameVersion("${project.minecraft_version}")
-    addLoader('fabric')
+    from("LICENSE") {
+        rename { "${it}_${project.archivesBaseName}"}
+    }
 }
