--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,11 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=21w44a
-loader_version=0.11.7
+minecraft_version=1.18-rc4
+loader_version=0.12.5
 # Mod Properties
-mod_version=1.0.6
+mod_version=1.0.7
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.42.1+1.18
-mod_menu_version=2.0.4
-crowdintranslate_version=1.3+1.17
+fabric_version=0.43.1+1.18
+mod_menu_version=3.0.0
