--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
 
-archivesBaseName = "craftingpad-" + project.minecraft_version
+archivesBaseName = project.modid + "-" + project.minecraft_version
 version = project.mod_version
 
 dependencies {
@@ -39,6 +39,31 @@ tasks.withType(JavaCompile).configureEach {
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
+        rename { "${it}_${project.archivesBaseName}" }
+    }
+}
+
+task setupGithubActions() {
+    doLast {
+        exec {
+            commandLine "echo", "##[set-output name=version;]${project.mod_version}"
+        }
+        exec {
+            commandLine "echo", "##[set-output name=modid;]${project.modid}"
+        }
+        exec {
+            commandLine "echo", "##[set-output name=minecraft_version;]${project.minecraft_version}"
+        }
+        exec {
+            commandLine "echo", "##[set-output name=curse_project_id;]${project.curse_project_id}"
+        }
+        exec {
+            commandLine "echo", "##[set-output name=curse_versions;]${project.curse_versions}"
+        }
+        if (rootProject.hasProperty('curse_relations')) {
+            exec {
+                commandLine "echo", "##[set-output name=curse_relations;]${project.curse_relations_fabric}"
+            }
+        }
     }
 }
