--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,15 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.18-rc4
-loader_version=0.12.5
+minecraft_version=1.18.2
+loader_version=0.13.3
 # Mod Properties
-mod_version=1.0.7
+mod_version=1.0.8
+modid=CraftingPad
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.43.1+1.18
-mod_menu_version=3.0.0
+fabric_version=0.47.10+1.18.2
+mod_menu_version=3.1.0
+# Publishing
+curse_project_id=308976
+curse_versions=Minecraft 1.18:1.18,Minecraft 1.18:1.18.1,Minecraft 1.18:1.18.2,Java 17,Fabric
