Fix github actions.

--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -24,7 +24,7 @@ jobs:
         id: create_release
         uses: meeDamian/github-release@2.0
         with:
-          files: "build/libs/${{ steps.build.outputs.name }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
+          files: "build/libs/${{ steps.build.outputs.modid }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
           gzip: false
           name: "${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}"
           token: "${{ secrets.GITHUB_TOKEN }}"
@@ -32,7 +32,7 @@ jobs:
         uses: itsmeow/curseforge-upload@master
         with:
           changelog: "Changelog not added yet..."
-          file_path: "build/libs/${{ steps.build.outputs.name }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
+          file_path: "build/libs/${{ steps.build.outputs.modid }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
           game_endpoint: minecraft
           relations: "${{ steps.build.outputs.curse_relations }}"
           game_versions: "${{ steps.build.outputs.curse_versions }}"
