--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.19
-loader_version=0.14.7
+minecraft_version=1.19.1
+loader_version=0.14.8
 # Mod Properties
 mod_version=1.0.9
 modid=CraftingPad
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.56.0+1.19
-mod_menu_version=4.0.0
+fabric_version=0.58.5+1.19.1
+mod_menu_version=4.0.5
 # Publishing
 curse_project_id=308976
-curse_versions=Minecraft 1.19:1.19,Java 17,Fabric
+curse_versions=Minecraft 1.19:1.19,Minecraft 1.19:1.19.1,Java 17,Fabric
