--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -9,11 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - { uses: actions/checkout@v2, with: { fetch-depth: 0 } }
-      - {
-        name: "Set up JDK 17",
-        uses: actions/setup-java@v2,
-        with: { distribution: "temurin", java-version: "17" },
-      }
+      - name: "Set up JDK 17"
+        uses: actions/setup-java@v2
+        with: { distribution: "temurin", java-version: "17" }
       - uses: burrunan/gradle-cache-action@v1
         name: Build with Gradle
         id: build
@@ -24,31 +22,31 @@ jobs:
         id: create_release
         uses: meeDamian/github-release@2.0
         with:
-          files: "build/libs/${{ steps.build.outputs.modid }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
+          files: "build/libs/${{ steps.build.outputs.mod_name }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
           gzip: false
           name: "${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}"
           token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: "Upload Fabric to CurseForge"
-        uses: itsmeow/curseforge-upload@master
+      - name: "Publish-Fabric"
+        uses: Kir-Antipov/mc-publish@v3.2
         with:
-          changelog: "Changelog not added yet..."
-          file_path: "build/libs/${{ steps.build.outputs.modid }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
-          game_endpoint: minecraft
-          relations: "${{ steps.build.outputs.curse_relations }}"
-          game_versions: "${{ steps.build.outputs.curse_versions }}"
-          project_id: "${{ steps.build.outputs.curse_project_id }}"
-          release_type: release
-          token: "${{ secrets.CF_API_TOKEN }}"
+          curseforge-id: 308976
+          curseforge-token: ${{ secrets.CF_API_TOKEN }}
+          modrinth-id: wyaOz4TN
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          loaders: fabric
+          version: ${{ steps.build.outputs.version }}
+          files: "build/libs/${{ steps.build.outputs.mod_name }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
+          name: "${{ steps.build.outputs.mod_name }}-${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}.jar"
       - name: "Build Success"
         id: build-success
         uses: itsmeow/webhook-action@master
         env:
           WEBHOOK_URL: "${{ secrets.DISCORD_WEBHOOK_URL }}"
-          data: '{"embeds":[{"title":"${{ steps.build.outputs.modid }} Release Build","url":"https://github.com/${{ github.repository }}/releases/tag/${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}","description":"Tag: ${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}\nStatus: Successful","color":65280,"author":{"name":"${{ github.event.user.login }}","url":"${{ github.event.user.html_url }}","icon_url":"${{ github.event.user.avatar_url }}"}}]}'
+          data: '{"embeds":[{"title":"${{ steps.build.outputs.mod_name }} Release Build","url":"https://github.com/${{ github.repository }}/releases/tag/${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}","description":"Tag: ${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}\nStatus: Successful","color":65280,"author":{"name":"${{ github.event.user.login }}","url":"${{ github.event.user.html_url }}","icon_url":"${{ github.event.user.avatar_url }}"}}]}'
       - name: "Build Fail"
         id: build-fail
         uses: itsmeow/webhook-action@master
         if: failure()
         env:
           WEBHOOK_URL: '${{ secrets.DISCORD_WEBHOOK_URL }}\'
-          data: '{"embeds":[{"title":"${{ steps.build.outputs.modid }} Release Build","url":"https://github.com/${{ github.repository }}/releases/tag/${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}","description":"Tag: ${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}\nStatus: Failed","color":16711680,"author":{"name":"${{ github.event.user.login }}","url":"${{ github.event.user.html_url }}","icon_url":"${{ github.event.user.avatar_url }}"}}]}'
+          data: '{"embeds":[{"title":"${{ steps.build.outputs.mod_name }} Release Build","url":"https://github.com/${{ github.repository }}/releases/tag/${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}","description":"Tag: ${{ steps.build.outputs.minecraft_version }}-${{ steps.build.outputs.version }}\nStatus: Failed","color":16711680,"author":{"name":"${{ github.event.user.login }}","url":"${{ github.event.user.html_url }}","icon_url":"${{ github.event.user.avatar_url }}"}}]}'
