--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
 
-archivesBaseName = project.mod_name + "-" + project.minecraft_version
+archivesBaseName = project.mod_name + "-fabric-" + project.minecraft_version
 version = project.mod_version
 
 dependencies {
