--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,12 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
-# Fabric Properties
-# check these on https://fabricmc.net/versions.html
-minecraft_version=1.19.3
-loader_version=0.14.11
+minecraft_version=1.20.1
+loader_version=0.14.21
+fabric_version=0.84.0+1.20.1
+mod_menu_version=7.1.0
 # Mod Properties
-mod_version=1.0.11
+mod_version=1.0.12
 mod_name=CraftingPad
-# Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.68.1+1.19.3
-mod_menu_version=5.0.2
+mod_id=craftingpad
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+org.gradle.parallel=true
